tests/spectest/ref_func.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
  "\01\7f\01\7f\03\82\80\80\80\00\01\00\07\85\80\80"
  "\80\00\01\01\66\00\00\0a\8a\80\80\80\00\01\84\80"
  "\80\80\00\00\20\00\0b"
)
(module instance)
(register "M")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\03\60"
  "\01\7f\01\7f\60\00\00\60\00\01\7f\02\87\80\80\80"
  "\00\01\01\4d\01\66\00\00\03\8f\80\80\80\00\0e\00"
  "\01\01\01\01\01\02\02\02\01\01\00\00\00\04\84\80"
  "\80\80\00\01\70\00\01\06\9a\80\80\80\00\05\70\00"
  "\d2\00\0b\70\00\d2\01\0b\70\01\d2\00\0b\70\00\d2"
  "\03\0b\70\00\d2\04\0b\07\d0\80\80\80\00\08\09\69"
  "\73\5f\6e\75\6c\6c\2d\66\00\07\09\69\73\5f\6e\75"
  "\6c\6c\2d\67\00\08\09\69\73\5f\6e\75\6c\6c\2d\76"
  "\00\09\05\73\65\74\2d\66\00\0a\05\73\65\74\2d\67"
  "\00\0b\06\63\61\6c\6c\2d\66\00\0c\06\63\61\6c\6c"
  "\2d\67\00\0d\06\63\61\6c\6c\2d\76\00\0e\09\94\80"
  "\80\80\00\03\03\00\02\03\05\07\70\02\d2\04\0b\d2"
  "\06\0b\03\00\02\00\01\0a\a6\81\80\80\00\0e\87\80"
  "\80\80\00\00\20\00\41\01\6a\0b\88\80\80\80\00\00"
  "\d2\05\1a\d2\06\1a\0b\82\80\80\80\00\00\0b\82\80"
  "\80\80\00\00\0b\82\80\80\80\00\00\0b\82\80\80\80"
  "\00\00\0b\85\80\80\80\00\00\d2\00\d1\0b\85\80\80"
  "\80\00\00\d2\01\d1\0b\85\80\80\80\00\00\23\02\d1"
  "\0b\86\80\80\80\00\00\d2\00\24\02\0b\86\80\80\80"
  "\00\00\d2\01\24\02\0b\8f\80\80\80\00\00\41\00\d2"
  "\00\26\00\20\00\41\00\11\00\00\0b\8f\80\80\80\00"
  "\00\41\00\d2\01\26\00\20\00\41\00\11\00\00\0b\8f"
  "\80\80\80\00\00\41\00\23\02\26\00\20\00\41\00\11"
  "\00\00\0b"
)
(module instance)
(assert_return (invoke "is_null-f") (i32.const 0x0))
(assert_return (invoke "is_null-g") (i32.const 0x0))
(assert_return (invoke "is_null-v") (i32.const 0x0))
(assert_return (invoke "call-f" (i32.const 0x4)) (i32.const 0x4))
(assert_return (invoke "call-g" (i32.const 0x4)) (i32.const 0x5))
(assert_return (invoke "call-v" (i32.const 0x4)) (i32.const 0x4))
(invoke "set-g")
(assert_return (invoke "call-v" (i32.const 0x4)) (i32.const 0x5))
(invoke "set-f")
(assert_return (invoke "call-v" (i32.const 0x4)) (i32.const 0x4))
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\02\8d\80\80\80\00\02\01\4d\01\66\00"
    "\00\01\4d\01\67\00\00\06\86\80\80\80\00\01\70\00"
    "\d2\07\0b"
  )
  "unknown function 7"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\88\80\80\80\00\07\00\00\00\00\00\00\00"
  "\04\84\80\80\80\00\01\70\00\01\06\86\80\80\80\00"
  "\01\70\00\d2\00\0b\07\85\80\80\80\00\01\01\66\00"
  "\01\09\99\80\80\80\00\04\00\41\00\0b\01\02\04\41"
  "\00\0b\01\d2\03\0b\01\00\01\04\05\70\01\d2\05\0b"
  "\0a\bf\80\80\80\00\07\82\80\80\80\00\00\0b\82\80"
  "\80\80\00\00\0b\82\80\80\80\00\00\0b\82\80\80\80"
  "\00\00\0b\82\80\80\80\00\00\0b\82\80\80\80\00\00"
  "\0b\8f\80\80\80\00\00\d2\00\d2\01\d2\02\d2\03\d2"
  "\04\d2\05\0f\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8b\80\80\80\00"
    "\01\85\80\80\80\00\00\d2\00\1a\0b"
  )
  "undeclared function reference"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\08\81\80\80\80\00"
    "\00\0a\8b\80\80\80\00\01\85\80\80\80\00\00\d2\00"
    "\1a\0b"
  )
  "undeclared function reference"
)
